--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,85 @@
-:root {
+/* :root {
   --primary:#FFF;
   --secondary:#000;
-}
+} */
 
 * {
-  box-sizing:border-box;
+  box-sizing: border-box;
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
 }
 
-html {
-  background: var(--secondary);
-  color: var(--primary);
+header {
+  width: 100vw;
+  height: 50vh;
+  background-image: url("../img/mtb.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #cccccc;
+}
+
+.wrapper {
+  background-color: rgb(255, 255, 255, 1);
+  border: 1px solid black;
+  width: 30em;
+  margin: -10em auto 2em auto;
+  border-radius: 1em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.wrapper img {
+  border-radius: 50%;
+  margin: 0 auto 1em auto;
+  width: 10em;
+  border: 5px solid white;
+  margin: -7.5vh auto 0 auto;
+  background-color: white;
+}
+
+.socials img {
+  width: 3em;
+  margin: 0 .5em;
+  border: none;
+}
+
+.socials {
+  margin: 1em auto;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 300;
+  font-size: 3em;
+}
+
+p {
+  text-align: center;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 300;
+  padding: 1em 0;
+}
+
+dl {
+  font-family: 'Dosis', sans-serif;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center
+}
+
+dt {
+
+  padding-top: 1em;
+  font-weight: 600;
+}
+
+dd {
+  padding: 0 1em 2em 1em;
 }
